fixed breakpoints, styled a little more on mobile, and fixed zindexing for footer

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -200,7 +200,7 @@ a > div.col-md-4.feature-panel > p.lead.bs-lead{color:#373a3c;}
 .no-padding{padding-left:0;padding-right:0;}
 .talk-preview-image{width:100%;}
 .simple-featurette{display:none;}
-.sticky-share{display:flex;flex-direction:column;justify-content:center;height:150px;position:fixed;top:40%;left:-10px;background-color:transparent;z-index:-10;}
+.sticky-share{display:none!important;flex-direction:column;justify-content:center;height:150px;position:fixed;top:45%;left:15px;background-color:transparent;}
 .sticky-share > div:hover{cursor:pointer;}
 
 /* Cards */
@@ -263,7 +263,7 @@ pre{margin-top:30px;margin-bottom:30px;padding:30px 20px;border-color:rgba(32,35
 .nav-sidebar > .active > a,.nav-sidebar > .active > a:hover,.nav-sidebar > .active > a:focus{color:#fff;background-color:#428bca;}
 
 /* Footer */
-footer{padding-top:60px;padding-bottom:80px;background-color:rgba(26,26,26,1);color:rgba(255,255,255,1);font-size:13px;}
+footer{position:relative;padding-top:60px;padding-bottom:80px;background-color:rgba(26,26,26,1);color:rgba(255,255,255,1);font-size:13px;z-index:999;}
 footer > li{list-style:none;}
 .foot-menu{padding-top:20px;}
 .foot-menu > li{padding:4px 15px;}
@@ -285,6 +285,12 @@ footer > li{list-style:none;}
 /* Extra small devices (phones, less than 768px) */
 
 /* No media query since this is the default in Bootstrap */
+
+/* Custom break for sticky share since overlaping container at normal breaks*/
+
+@media (min-width:830px){
+  .sticky-share{display:flex!important;}
+}
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width:768px){
@@ -370,7 +376,6 @@ footer > li{list-style:none;}
   .paper-section{padding-top:65px;padding-bottom:65px;}
   .sidebar{position:fixed;top:56px;bottom:0;left:0;z-index:1000;display:block;padding:0px 20px 20px 20px;overflow-x:hidden;overflow-y:auto; /* Scrollable contents if viewport is shorter than content. */background-color:#f5f5f5;border-right:1px solid #eee;}
   .bitcoin-protocols-main{padding-right:40px;padding-left:40px;}
-  .sticky-share{height:150px;left:0;}
 }
 
 /* Medium devices (desktops, 992px and up) */
@@ -430,7 +435,7 @@ footer > li{list-style:none;}
 }
 
 @media (max-width:575px){
-  .sticky-share{flex-direction:row;width:100%;height:50px;bottom:0;left:0;top:initial;z-index: 20;background-color:white;}
+  .sticky-share{display:flex!important;flex-direction:row;width:100%;height:50px;bottom:0!important;left:0;top:initial;z-index:20;background-color:white;border-top:1px solid #f0f0f0;}
 }
 
 /* x-Small devices (hide last child in navbar) */
